--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -337,6 +337,9 @@ h2 {
   margin-left: 10px
 }
 
+.settings_play-btn{
+  margin-top: 10px;
+}
 .slider {
   display: inline-block;
   margin-top: 10px;
