Add a new color for cards

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -59,6 +59,10 @@
   background-color: #f2825b;
 }
 
+.green {
+  background-color: #79f2b2;
+}
+
 .card-lbl {
   background-color: #f9f28d;
   display: block;
