Add share button to copy link with rhythm

--- a/src/components/generator/generator.scss
+++ b/src/components/generator/generator.scss
@@ -14,6 +14,17 @@
   clear: both;
 }
 
+.share-btn{
+  display: inline-block;
+  vertical-align: bottom;
+  padding-bottom: 6px;
+  margin-left: 15px;
+}
+
+.link-copy-block{
+  margin-top: 10px;
+}
+
 .row6:nth-child(6n) {
   margin-right: 50px;
 }
