Add meta head component

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,6 @@
 <title property="og:title">Footwork Generator - variate your lindy hop basic!</title>
-<meta name="keywords" content = "{{'META_KEYWORDS' | translate}}" />
-<meta name="description" content="{{'META_DESCRIPTION' | translate}}" />
+<meta property="og:title" content="Footwork Generator - variate your lindy hop basic!" />
+<meta name="description" content="The Footwork Generator for lindy hop dancers" />
 <meta property="og:description" content="The Footwork Generator for lindy hop dancers" />
 <meta property="og:image" content="http://fwg.it4t.ru/assets/images/preview.png" />
 <meta property="og:url" content="http://fwg.it4t.ru/" />
-<meta property="og:title" content="Footwork Generator - variate your lindy hop basic!" />
