--- a/src/components/sound/sound.scss
+++ b/src/components/sound/sound.scss
@@ -20,3 +20,36 @@
 .settings_play-btn{
   margin-top: 10px;
 }
+
+.slider-message{
+  display: inline-block;
+  font-style: italic;
+}
+.slider-bpm{
+  display: inline-block;
+  min-width: 30px;
+  text-align: center;
+  margin: 0 5px;
+  font-weight: bold;
+}
+
+.slider{
+  vertical-align: middle;
+  margin: 0 10px;
+  margin-right: 20px;
+  position: relative;
+}
+
+.slider-start, .slider-end{
+  position: absolute;
+  margin-top: -10px;
+  font-size: 12px;
+}
+.slider-start{
+  left:0;
+  margin-left: -7px;
+}
+.slider-end{
+  right: 0;
+  margin-right: -10px;
+}
