--- a/src/components/sound/sound.scss
+++ b/src/components/sound/sound.scss
@@ -1,8 +1,9 @@
-.sound-block{
+.sound-block {
   clear: both;
   padding-top: 15px;
   border-top: 1px solid #dedede;
 }
+
 .sound-label {
   display: inline-block;
   font-weight: bold;
@@ -11,21 +12,24 @@
 
 .sound-btns {
   display: inline-block;
+  margin-bottom: 5px;
 }
 
 .sound-btns .btn-group {
   margin-left: 10px
 }
 
-.settings_play-btn{
-  margin-top: 10px;
+.settings_play-btn {
+  margin-right: 15px;
+  vertical-align: top;
 }
 
-.slider-message{
+.slider-message {
   display: inline-block;
   font-style: italic;
 }
-.slider-bpm{
+
+.slider-bpm {
   display: inline-block;
   min-width: 30px;
   text-align: center;
@@ -33,23 +37,25 @@
   font-weight: bold;
 }
 
-.slider{
+.slider {
   vertical-align: middle;
   margin: 0 10px;
   margin-right: 20px;
   position: relative;
 }
 
-.slider-start, .slider-end{
+.slider-start, .slider-end {
   position: absolute;
   margin-top: -10px;
   font-size: 12px;
 }
-.slider-start{
-  left:0;
+
+.slider-start {
+  left: 0;
   margin-left: -7px;
 }
-.slider-end{
+
+.slider-end {
   right: 0;
   margin-right: -10px;
 }
