--- a/src/index.ejs
+++ b/src/index.ejs
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=640">
     <meta name="robots" content="all" />
     <base href="/"/>
+    <link rel="icon" href="/favicon.ico">
     <%- require('./partials/header.ejs')() %>
 </head>
 
 <body>
-<div id="app-main">Loading..</div>
+<div id="app">Loading..</div>
 <%- require('./partials/counters.ejs')() %>
 </body>
 </html>
