Update card index style

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -97,8 +97,7 @@
   line-height: 12px;
   color: #fff;
   text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
+  vertical-align: -moz-middle-with-baseline;
   border-radius: 10px;
   background-color: #aaa;
 }
